<resources>
    <string name="app_name">Sopt Practice</string>
    <string name="welcome_to_android">Welcome to Go Android!</string>
    <string name="pw">PASSWORD</string>
    <string name="edit_id_hint">아이디를 입력하세요.</string>
    <string name="edit_pw_hint">비밀번호를 입력하세요.</string>
    <string name="login">LOGIN</string>
    <string name="iv_go_android_description">고 솝트 안드로이드</string>
    <string name="sign_up">SIGN UP</string>
    <string name="id">ID</string>
    <string name="nickname">NICKNAME</string>
    <string name="edit_nickname_hint">별명을 입력하세요.</string>
    <string name="intro">INTRODUCE</string>
    <string name="edit_intro_hint">소개를 입력하세요.</string>
    <string name="sign_up_done">회원 가입 완료</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="gallery">갤러리</string>
    <string name="tv_search_fragment_test">search fragment\n등장!</string>
    <string name="tv_gallery_fragment_test">gallery fragment \n등장!</string>
    <string name="test_text">test text</string>
    <string name="mypage">마이페이지</string>
    <string name="logout">로그아웃</string>
    <string name="pager_item_image">pager item image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">유저</string>
    <string name="user_image">유저 이미지</string>
    <string name="user_name">유저 이름</string>
    <string name="user_email">유저 이메일</string>
</resources>