<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_android"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        />

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_id_hint"
        android:textColorHint="#9C9C9C"
        app:layout_constraintTop_toBottomOf="@id/tv_id"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@+id/welcome_text"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="10"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/edit_id"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        />

    <EditText
        android:id="@+id/edit_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_pw_hint"
        android:textColorHint="#9C9C9C"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_pw"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        android:inputType="textPassword"
        android:maxLength="12"
        android:autofillHints="false" /> <!--inputType을 Password로 설정하면 비번 가려줌!-->

    <Button
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/login"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/edit_pw"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        android:paddingVertical="10dp"
        />

    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/sign_up"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        app:layout_constraintEnd_toEndOf="@id/welcome_text"
        android:paddingVertical="10dp"
        android:windowSoftInputMode="adjustResize"
        />
</androidx.constraintlayout.widget.ConstraintLayout>